; ModuleID = '/home/carl/AnghaBench/RetroArch/cores/libretro-mpv/extr_mpv-libretro.c_get_proc_address_mpv.c'
source_filename = "/home/carl/AnghaBench/RetroArch/cores/libretro-mpv/extr_mpv-libretro.c_get_proc_address_mpv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 (i8*)* }

@hw_render = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@RETRO_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"Failure obtaining %s proc address\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i8*)* @get_proc_address_mpv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_proc_address_mpv(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i64 (i8*)*, i64 (i8*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @hw_render, i32 0, i32 0), align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i64 %6(i8* %7)
  %9 = inttoptr i64 %8 to i8*
  store i8* %9, i8** %5, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = icmp eq i8* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load i32, i32* @RETRO_LOG_ERROR, align 4
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @log_cb(i32 %13, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %14)
  br label %16

16:                                               ; preds = %12, %2
  %17 = load i8*, i8** %5, align 8
  ret i8* %17
}

declare dso_local i32 @log_cb(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
